change reveal pattern

--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -27,7 +27,7 @@
     <script src="jquery.min.js"></script>
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script> -->
     <script src="lodash.js"></script>
-    <script src="main.js?v=1.1.25v4"></script>
+    <script src="main.js?v=1.2.25"></script>
     <script src="strings.js?v=1.1.25v3"></script>
     <script src="daily.js?v=1.1.25"></script>
     <link href="styles.css?v=1.1.25" rel="stylesheet"></link>
@@ -75,28 +75,28 @@
                                 <img class="unrevealed" ng-show="vm.challengeStep <= 1" ng-src="https://stripedypaper.github.io/ak-guesser/image/unrevealed1.png" style="height: 100%">
                             </div>
                             <div class="skin-container-xsmall" ng-style="vm.extraSmallImageContainerStyle">
-                                <img draggable="false" crossorigin="anonymous" ng-show="vm.showSkin && vm.challengeStep >= 1" ng-src="{{vm.skin.url}}" class="skin-image" ng-style="vm.challengeViewPortInfos[2].style">
-                                <img class="unrevealed" ng-show="vm.challengeStep <= 1" ng-src="https://stripedypaper.github.io/ak-guesser/image/unrevealed3.png" style="height: 100%">
+                                <img draggable="false" crossorigin="anonymous" ng-show="vm.showSkin && vm.challengeStep >= 2" ng-src="{{vm.skin.url}}" class="skin-image" ng-style="vm.challengeViewPortInfos[3].style">
+                                <img class="unrevealed" ng-show="vm.challengeStep <= 2" ng-src="https://stripedypaper.github.io/ak-guesser/image/unrevealed3.png" style="height: 100%">
                             </div>
                         </div>
                         <div class="grid-row" ng-show="vm.showSkin">
                             <div class="skin-container-xsmall" ng-style="vm.extraSmallImageContainerStyle">
-                                <img draggable="false" crossorigin="anonymous" ng-show="vm.showSkin && vm.challengeStep >= 2" ng-src="{{vm.skin.url}}" class="skin-image" ng-style="vm.challengeViewPortInfos[3].style">
-                                <img class="unrevealed" ng-show="vm.challengeStep <= 2" ng-src="https://stripedypaper.github.io/ak-guesser/image/unrevealed4.png" style="height: 100%">
+                                <img draggable="false" crossorigin="anonymous" ng-show="vm.showSkin && vm.challengeStep >= 1" ng-src="{{vm.skin.url}}" class="skin-image" ng-style="vm.challengeViewPortInfos[2].style">
+                                <img class="unrevealed" ng-show="vm.challengeStep <= 1" ng-src="https://stripedypaper.github.io/ak-guesser/image/unrevealed4.png" style="height: 100%">
                             </div>
                             <div class="skin-container-xsmall" ng-style="vm.extraSmallImageContainerStyle">
                                 <img draggable="false" crossorigin="anonymous" ng-show="vm.showSkin && vm.challengeStep >= 2" ng-src="{{vm.skin.url}}" class="skin-image" ng-style="vm.challengeViewPortInfos[4].style">
                                 <img class="unrevealed" ng-show="vm.challengeStep <= 2" ng-src="https://stripedypaper.github.io/ak-guesser/image/unrevealed2.png" style="height: 100%">
                             </div>
                             <div class="skin-container-xsmall" ng-style="vm.extraSmallImageContainerStyle">
-                                <img draggable="false" crossorigin="anonymous" ng-show="vm.showSkin && vm.challengeStep >= 3" ng-src="{{vm.skin.url}}" class="skin-image" ng-style="vm.challengeViewPortInfos[5].style">
-                                <img class="unrevealed" ng-show="vm.challengeStep <= 2" ng-src="https://stripedypaper.github.io/ak-guesser/image/unrevealed5.png" style="height: 100%">
+                                <img draggable="false" crossorigin="anonymous" ng-show="vm.showSkin && vm.challengeStep >= 3" ng-src="{{vm.skin.url}}" class="skin-image" ng-style="vm.challengeViewPortInfos[6].style">
+                                <img class="unrevealed" ng-show="vm.challengeStep <= 3" ng-src="https://stripedypaper.github.io/ak-guesser/image/unrevealed5.png" style="height: 100%">
                             </div>
                         </div>
                         <div class="grid-row" ng-show="vm.showSkin">
                             <div class="skin-container-xsmall" ng-style="vm.extraSmallImageContainerStyle">
-                                <img draggable="false" crossorigin="anonymous" ng-show="vm.showSkin && vm.challengeStep >= 3" ng-src="{{vm.skin.url}}" class="skin-image" ng-style="vm.challengeViewPortInfos[6].style">
-                                <img class="unrevealed" ng-show="vm.challengeStep <= 3" ng-src="https://stripedypaper.github.io/ak-guesser/image/unrevealed6.png" style="height: 100%">
+                                <img draggable="false" crossorigin="anonymous" ng-show="vm.showSkin && vm.challengeStep >= 2" ng-src="{{vm.skin.url}}" class="skin-image" ng-style="vm.challengeViewPortInfos[5].style">
+                                <img class="unrevealed" ng-show="vm.challengeStep <= 2" ng-src="https://stripedypaper.github.io/ak-guesser/image/unrevealed6.png" style="height: 100%">
                             </div>
                             <div class="skin-container-xsmall" ng-style="vm.extraSmallImageContainerStyle">
                                 <img draggable="false" crossorigin="anonymous" ng-show="vm.showSkin && vm.challengeStep >= 3" ng-src="{{vm.skin.url}}" class="skin-image" ng-style="vm.challengeViewPortInfos[7].style">
