--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -27,8 +27,8 @@
     <script src="jquery.min.js"></script>
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script> -->
     <script src="lodash.js"></script>
-    <script src="main.js?v=1.4.25"></script>
-    <script src="strings.js?v=1.1.25v3"></script>
+    <script src="main.js?v=1.4.25v2"></script>
+    <script src="strings.js?v=1.4.25"></script>
     <script src="daily.js?v=1.1.25"></script>
     <script src="face.js?v=1.3.25"></script>
     <link href="styles.css?v=1.1.25" rel="stylesheet"></link>
