update skill and enemy guesser to use ArknightsAssets

--- a/ak-guesser/enemy/index.html
+++ b/ak-guesser/enemy/index.html
@@ -25,7 +25,7 @@
     <script src="../ui-bootstrap-tpls-2.5.0.min.js"></script>
     <script src="../jquery.min.js"></script>
     <script src="../lodash.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js?v=5.6.25"></script>
     <link href="../styles.css" rel="stylesheet"></link>
     <base href="/ak-guesser">
     <meta name="description" content="Try guessing the Arknights enemy's name from an image.">
@@ -124,7 +124,7 @@
         </div>
         <div class="flexh">
             <div class="flex1" style="margin-top:auto">
-                <div class="small">Thanks to Aceship and Kengxxiao for game resources</a></div>
+                <div class="small">Thanks to <a target="blank" href="https://github.com/Kengxxiao/ArknightsGameData">ArknightsGameData</a> and <a target="blank" href="https://github.com/ArknightsAssets/ArknightsAssets">ArknightsAssets</a> for game resources</a></div>
                 <div class="small">Created by <a target="blank" href="https://twitter.com/boardwalkhotel_">@boardwalkhotel_</a></div>
             </div>
             <a href="ak-guesser/" target="_self">
